# acfc

./: .gitignore  README.md  acfc.py  pyproject.toml  requirements.txt  setup.py
acfc/: __main__.py  colors.py  helpers.py
src/: __init__.py  __main__.py
src/acfc/: __init__.py  __main__.py  acfc.py  colors.py  helpers.py  main.py
src/acfc/colors/: __init__.py
src/grtcdr_acfc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: colors.py  test_acfc.py
