[tool.poetry]
name = "acfc"
version = "2.0.1"
description = "Alacritty Colors to Foot Colors (Converter)"
authors = ["grtcdr <ba.tahaaziz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
configparser = "^5.0.2"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
